--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,10 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -81,10 +85,7 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
-														<version>1.18.12</version>
-							
-							
-							
+							<version>1.18.12</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
