--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,22 @@
-version: 2.1
-
-orbs:
-  maven: circleci/maven@0.0.12
-
-workflows:
-  maven_test:
-    jobs:
-      - maven/test # checkout, build, test, and upload test results
+version: 2
+jobs:
+  build:
+    docker:
+      - image: circleci/openjdk:8u181-jdk
+    working_directory: ~/repo
+    environment:
+      MAVEN_OPTS: -Xmx3200m
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-
+            - v1-dependencies-
+      - run: mvn install
+      - run: mvn test
+      - run: "mvn cobertura:cobertura"
+      - run: "bash <(curl -s https://codecov.io/bash)"
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: v1-dependencies-
