--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,15 @@
 	</dependencies>
 
 	<build>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<configuration>
+				<skipTests>false</skipTests>
+				<testFailureIgnore>true</testFailureIgnore>
+				<forkMode>once</forkMode>
+			</configuration>
+		</plugin
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
